# KMeans_Algorithm

./: .gitignore  CMakeLists.txt  Documentation.org  Formulae.py  Makefile  README.md  colorSpace.py  coverage.info  main.run  meson.build  output3000_mark
assets/: k2.avi_cache
coverage_info/: index-sort-f.html  index-sort-l.html  index.html
coverage_info/src/: centroid.cpp.func-sort-c.html  centroid.cpp.func.html  centroid.cpp.gcov.html  centroid.h.func-sort-c.html  centroid.h.func.html  centroid.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_info/t/: centroid_tests.cpp.func-sort-c.html  centroid_tests.cpp.func.html  centroid_tests.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
include/: CMakeLists.txt  centroid.h  color.h  constants.h  image.h  meson.build  videoProcess.h
include/color/: Lab.h
include/image/: image.h
include/logic/: centroid.h  kmeans.h
include/video/: videoProcess.h
src/: Elbows.ods  Lab.cpp  Lch.cpp  Makefile  XYZ.cpp  XYZ.h  centroid.cpp  centroid.gcno  centroid.h  color.cpp  color.h  constants.h  difference.cpp  difference.h  image.cpp  image.h  kmeans.cpp  kmeans.h  main.cpp  main.gcda  main.gcno  meson.build  pixel.h  sRGB.h  videoProcess.cpp  videoProcess.h
src/color/: Lch.h  sRGB.cpp
src/logic/: kmeans.cpp  videoProcess.h
src/video/: videoProcess.cpp
t/: Makefile  centroid_tests.cpp  centroid_tests.gcno  image_tests.cpp  kmeans_tests.cpp
